Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34124

Sequence Fails with Galera Version 26.4.16 and later (MariaDB Server 10.6.17) in the Presence of Enabled Streaming Replication

    XMLWordPrintable

Details

    • Notable changes
    • Sequence Fails with Galera Version 26.4.16 and later in the Presence of enabled streaming replication
    • Q4/2025 Galera Maintenance, Q4/2025 Galera Development, Q1/2026 Galera Maintenance

    Description

      Select next value from the sequence fails with below error in MariaDB Galera Cluster

       
      ERROR 1235 (42000): This version of MariaDB doesn't yet support 'SEQUENCEs with streaming replication in Galera cluster'
      
      

      Test case :-

       
      MariaDB [test]> show global variables like 'version';
      +---------------+---------------------+
      | Variable_name | Value               |
      +---------------+---------------------+
      | version       | 10.6.17-MariaDB-log |
      +---------------+---------------------+
      1 row in set (0.001 sec)
       
       
      MariaDB [(none)]> SHOW STATUS LIKE 'wsrep_provider_version';
      +------------------------+-------------------+
      | Variable_name          | Value             |
      +------------------------+-------------------+
      | wsrep_provider_version | 26.4.16(r7dce514) |
      +------------------------+-------------------+
      1 row in set (0.001 sec)
       
      MariaDB [(none)]> show global variables like '%wsrep_trx%';
      +-------------------------+----------+
      | Variable_name           | Value    |
      +-------------------------+----------+
      | wsrep_trx_fragment_size | 10240000 |
      | wsrep_trx_fragment_unit | bytes    |
      +-------------------------+----------+
      2 rows in set (0.001 sec)
       
      MariaDB [(none)]> select * from mysql.wsrep_cluster;
      +--------------------------------------+---------+------------+------------------+--------------+
      | cluster_uuid                         | view_id | view_seqno | protocol_version | capabilities |
      +--------------------------------------+---------+------------+------------------+--------------+
      | b47c150a-eb39-11ee-a832-528b77b9f3c4 |      41 |        172 |                4 |       184703 |
      +--------------------------------------+---------+------------+------------------+--------------+
      1 row in set (0.001 sec)
       
      MariaDB [(none)]> select * from mysql.wsrep_cluster_members;
      +--------------------------------------+--------------------------------------+-----------+-----------------------+
      | node_uuid                            | cluster_uuid                         | node_name | node_incoming_address |
      +--------------------------------------+--------------------------------------+-----------+-----------------------+
      | 4227e2e0-0dae-11ef-b33f-878f0cd70cd5 | b47c150a-eb39-11ee-a832-528b77b9f3c4 | gcn-02    | 192.168.47.42:3306    |
      | 84c84e8c-0dae-11ef-aca4-1377bfb10b11 | b47c150a-eb39-11ee-a832-528b77b9f3c4 | gcn-03    | 192.168.47.43:3306    |
      | a664e68f-0dad-11ef-8c20-6249933a39f0 | b47c150a-eb39-11ee-a832-528b77b9f3c4 | gcn-01    | 192.168.47.41:3306    |
      +--------------------------------------+--------------------------------------+-----------+-----------------------+
      3 rows in set (0.001 sec)
       
      MariaDB [(none)]> use test;
      Database changed
       
       
      MariaDB [test]> create sequence test_sequence start with 1 increment by 0;
      Query OK, 0 rows affected (0.015 sec)
       
      MariaDB [test]> select next value for test_sequence;
      ERROR 1235 (42000): This version of MariaDB doesn't yet support 'SEQUENCEs with streaming replication in Galera cluster'
       
      
      

      Attachments

        Issue Links

          Activity

            People

              denis.protivensky Denis Protivensky (Inactive)
              pramod.mahto@mariadb.com Pramod Mahto
              Votes:
              1 Vote for this issue
              Watchers:
              11 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 20d Original Estimate - 20d
                  20d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 26d 6.5h
                  26d 6.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.