storage/innobase/row/row0ins.cc
@@ -2770,7 +2770,7 @@ err_exit:
 
 #ifdef WITH_WSREP
 			if (trx->is_wsrep() &&
-			    wsrep_append_table_key(trx->mysql_thd, *index->table))
+			    wsrep_append_table_key(trx->mysql_thd, *index->table, true))
 			{
 				trx->error_state = DB_ROLLBACK;
 				goto err_exit;
